# GPRProc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  formats.h  loadmarksdialog.cpp  loadmarksdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  procdialoggen.py  procdialoghdr.py  procdialogsrc.py  proceduresdialog.cpp  proceduresdialog.h  processingstepsdialog.cpp  processingstepsdialog.h  profile.cpp  profile.h  profiledocker.cpp  profiledocker.h  tabbedworkspacewidget.cpp  tabbedworkspacewidget.h
src/: formats.h  mainwindow.cpp  mainwindow.h  processingstepsdialog.cpp  profile.cpp  profile.h  profiledocker.h  tabbedworkspacewidget.h
src/qml/: mapview.qml  qml.qrc
